--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -48,7 +48,7 @@
 				<h3 class="beautify">My Trips</h3>
 
 				<!-- Current Trip Information -->
-				<article class="saved">
+				<article class="trip__saved">
 					<p>You have not saved any trips so far...</p>
 				</article>
 
@@ -75,9 +75,6 @@
 					</div>
 					<div class="trip__function1">
 						<button id="saveB" type="button">Save</button>
-					</div>
-					<div class="trip__function2">
-						<button id="clearB" type="button">Clear</button>
 					</div>
 
 				</article>
