--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -4,7 +4,6 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 		<title>Travel Planner App</title>
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 	</head>
 	<body>
 
@@ -13,7 +12,6 @@
 			<!-- Welcome -->
 			<hgroup>
 				<h1 class="beautify">Welcome to Travel Planner</h1>
-				<h3>Our Travel Planner helps you figure out the details, organize your trip efficiently and enjoy it!</h3>
 			</hgroup>
 
 			<!-- App Logo -->
@@ -85,11 +83,14 @@
 
 		<footer>
 
-			<h1 class="beautify" id="footer__item__1">Follow us!</h1>
+			<hgroup id="footer__item__1">
+				<h1 class="beautify">Follow us!</h1>
+			</hgroup>
 
 			<!-- Owner photo -->
 			<figure id="footer__item__2">
 				<img src="../media/owner.jpg" alt="App Owner">
+				<h3 class="quote">"Our travel planner helps you figure out the details, organize your trip efficiently and enjoy it!" - Urunov Ulugbek</h3>
 			</figure>
 
 			<!-- Contact Details -->
