--- a/src/client/styles/layout.scss
+++ b/src/client/styles/layout.scss
@@ -2,14 +2,13 @@
 
 #footer__item__1 {
 	grid-area: footer__item__1;
-	justify-self: center;
 	margin: 0;
 	align-self: center;
 }
 
 #footer__item__2 {
 	grid-area: footer__item__2;
-	justify-self: center;
+	justify-self: end;
 }
 
 #footer__item__3 {
@@ -17,6 +16,16 @@
 }
 
 /* Selections by Class */
+
+.trip__content {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-auto-rows: minmax(100px, auto);
+	grid-template-areas:
+	"trip__destination__pic1 trip__main__content"
+	"trip__destination__pic2 trip__extra__content"
+	"trip__function1 trip__function1";
+}
 
 .trip__saved {	// container of trips
 	display: flex;
@@ -31,24 +40,18 @@
 	margin-bottom: 10px;
 }
 
-.trip__content {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-auto-rows: minmax(100px, auto);
-	grid-template-areas:
-	"trip__destination__pic1 trip__main__content"
-	"trip__destination__pic2 trip__extra__content"
-	"trip__function1 trip__function1";
-}
-
 .trip__destination__pic1 {
 	grid-area: trip__destination__pic1;
 	margin:0;
+	align-self: center;
+	justify-self: center;
 }
 
 .trip__destination__pic2 {
 	grid-area: trip__destination__pic2;
 	margin:0;
+	align-self: center;
+	justify-self: center;
 }
 
 .trip__main__content {
@@ -61,7 +64,13 @@
 
 .trip__function1 {
 	grid-area: trip__function1;
+	justify-self: center;
+	align-self: center;
+}
+
+.trip__saved__func {
 	justify-self: end;
+	align-self: center;
 }
 
 .trip__view__search {
@@ -77,8 +86,8 @@
 }
 
 .trip__saved__figure {
-	grid-area: trip__saved__figure;
-	margin:0;
+	justify-self: end;
+	align-self: center;
 }
 
 .trip__saved__main {
@@ -104,26 +113,21 @@
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
+	padding: 10px;
 }
 
 /* Selections by Element */
 
 footer {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-auto-rows: minmax(10px, auto);
-	grid-template-areas:
-	"footer__item__1 footer__item__2 footer__item__3";
+	grid-area: footer;
+}
+
+header {
+	grid-area: head;
 }
 
 main {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-auto-rows: minmax(100px, auto);
-	grid-template-areas:
-	"trip__view__search trip__view__search"
-	"trip__view__existing trip__view__new";
-	grid-gap: 10px;
+	grid-area: main;
 }
 
 ul {
@@ -135,8 +139,157 @@ ul {
 	padding: 0;
 }
 
-form {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
+body {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-auto-rows: minmax(10px, auto);
+	grid-template-areas:
+	"head"
+	"main"
+	"footer";
+}
+
+/* Smaller screens */
+
+@media (max-width: 300px)
+{
+	/* Selections by ID */
+
+	#footer__item__3 {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-evenly;
+	}
+	/* Selections by CLASS */
+
+	.flex-dir-col {
+		font-size: smaller;
+	}
+
+	.trip__content {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-auto-rows: minmax(100px, auto);
+		grid-template-areas:
+		"trip__destination__pic1 trip__destination__pic1"
+		"trip__main__content trip__main__content"
+		"trip__destination__pic2 trip__destination__pic2"
+		"trip__extra__content trip__extra__content"
+		"trip__function1 trip__function1";
+	}
+
+	/* Selections by ELEMENT */
+
+	p {
+		text-align: center;
+	}
+
+	form {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+	}
+}
+
+/* Small screens */
+
+@media (min-width: 300px) and (max-width: 500px)
+{
+	/* Selections by ID */
+	/* Selections by CLASS */
+
+	.trip__content {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-auto-rows: minmax(100px, auto);
+		grid-template-areas:
+		"trip__destination__pic1 trip__destination__pic1"
+		"trip__main__content trip__main__content"
+		"trip__destination__pic2 trip__destination__pic2"
+		"trip__extra__content trip__extra__content"
+		"trip__function1 trip__function1";
+	}
+
+	.quote {
+		font-size: medium;
+	}
+
+	.beautify {
+		font-size: x-large;
+	}
+
+	/* Selections by ELEMENT */
+
+	form {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+	}
+}
+
+/* Medium screens */
+
+@media (min-width: 500px) and (max-width: 799px)
+{
+	/* Selections by ID */
+	/* Selections by CLASS */
+	/* Selections by ELEMENT */
+
+	form {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+	}
+}
+
+/* More medium screens */
+
+@media (min-width: 800px) and (max-width: 1089px)
+{
+	/* Selections by ID */
+	/* Selections by CLASS */
+	/* Selections by ELEMENT */
+
+	form {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+	}
+}
+
+/* Large screens */
+
+@media (min-width: 1090px)
+{
+	/* Selections by ID */
+	/* Selections by CLASS */
+	/* Selections by ELEMENT */
+
+	footer {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-auto-rows: minmax(10px, auto);
+		grid-template-areas:
+		"footer__item__3 footer__item__1 footer__item__2";
+	}
+
+	main {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-auto-rows: minmax(100px, auto);
+		grid-template-areas:
+		"trip__view__search trip__view__search"
+		"trip__view__existing trip__view__new";
+		grid-gap: 10px;
+	}
+
+	form {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+	}
 }
