--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -102,7 +102,7 @@
 					<a href="https://www.facebook.com/uurunov" class="social-media">Facebook</a>
 				</li>
 				<li>
-					<a href="https://twitter.com/UlugbekUrinov" class="social-media">Twitter</a>
+					<a href="https://twitter.com/uurunov97" class="social-media">Twitter</a>
 				</li>
 				<li>
 					<a href="https://www.linkedin.com/in/uurunov/" class="social-media">LinkedIn</a>
